@@ -16,6 +16,7 @@ description = "No description provided"
     simulation mode only = False
     pyro connection timeout = (none)
     max simultaneous job submissions = 50
+    abort if any task fails = boolean = False
     [[logging]]
         directory = '$HOME/cylc-run/$CYLC_SUITE_REG_NAME/log/suite'
         roll over at start-up = True
