@@ -876,3 +876,7 @@ registration name hierarchy had been omitted.
 original order) so that the suite can shutdown if requested even if a
 failing task has retries lined up with a very short delay period.
 
++ New config item "[cylc] abort if any task fails = False"; if True,
+the suite will abort with exit status 1 if any task false. The main
+intended use for this is in pre-release automated test suites.
+
